[metadata]
name = syml
author = David Eyk
author_email = david@worldsenoughstudios.com
description = SYML (Simple YAML-like Markup Language) is a simple markup language with similar structure to YAML, but without all the gewgaws and folderol.
long_description = file: README.rst
url = https://github.com/eykd/syml
license = MIT
keywords = yaml, markup, syml
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup

[options]
package_dir=
    =src
packages=find:
install_requires=
    attrs
    parsimonious

[options.packages.find]
where=src


[versioneer]
VCS = git
style = pep440
versionfile_source = syml/_version.py
versionfile_build = syml/_version.py
tag_prefix =
parentdir_prefix = syml-
