[metadata]
name = syml
author = David Eyk
author_email = david@worldsenoughstudios.com
description = SYML (Simple YAML-like Markup Language) is a simple markup language with similar structure to YAML, but without all the gewgaws and folderol.
long_description = file: README.rst
url = https://github.com/eykd/syml
license = MIT
keywords = yaml, markup, syml
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup

[options]
package_dir=
    =src
packages=find:
install_requires=
    attrs
    parsimonious

[options.packages.find]
where=src


[versioneer]
VCS = git
style = pep440
versionfile_source = src/syml/_version.py
versionfile_build = src/syml/_version.py
tag_prefix =
parentdir_prefix = syml-


[flake8]
exclude =
        .git,
        venv,
        dist,
        __pycache__,
        versioneer.py
        src/syml/_version.py
max-line-length = 120
ignore =
       W503, # line break occurred before a binary operator
       E203, # whitespace before ':'

[isort]
profile=black
src_paths=src,test

[mypy]
mypy_path = $MYPY_CONFIG_FILE_DIR/src
files = src/**/*.py
